[project]
name = "yogurtnodes"
description = "ComfyUI-YogurtNodes is a collection of custom nodes for ComfyUI, providing a series of practical image processing and workflow enhancement functionalities."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["numpy", "pillow", "google-genai"]

[project.urls]
Repository = "https://github.com/yogurt7771/ComfyUI-YogurtNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "yogurt7771"
DisplayName = "ComfyUI-YogurtNodes"
Icon = ""
